--- a/template.tex
+++ b/template.tex
@@ -4,10 +4,10 @@
 \begin{document}
 
 \title{template}
-\author{中尾}
+\author{nakao}
 \maketitle
 
-\section{はじめに}
+\section{Introduction}
 
 日本語打てますか。下に画像つけておきます。
 \begin{figure}[h]
