--- a/template/template.tex
+++ b/template/template.tex
@@ -1,6 +1,9 @@
 \documentclass[a4paper]{jsarticle}
 \usepackage[dvipdfmx]{graphicx}
-
+\usepackage{amsmath}
+\renewcommand{\thesection}{第\arabic{section}問}
+\renewcommand{\thesubsection}{(\arabic{subsection})}
+\renewcommand{\thesubsubsection}{(\alph{subsubsection})}
 \begin{document}
 
 \title{template}
