2019分野1第一問解いた #5

--- a/template/template.tex
+++ b/template/template.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{jsarticle}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{amsmath}
+\usepackage{bm}
 \renewcommand{\thesection}{第\arabic{section}問}
 \renewcommand{\thesubsection}{(\arabic{subsection})}
 \renewcommand{\thesubsubsection}{(\alph{subsubsection})}
