#20 第2問解いた

--- a/field3/2017/main.tex
+++ b/field3/2017/main.tex
@@ -165,4 +165,25 @@ $\eta_0, L$が$100$倍に、$A, s$が$100^2$倍になる。
 式(18)より、$L$を$1/2$倍にしたときに$U_0$は$\sqrt{2}$倍になる。
 これを考慮すれば、$r_2$が2倍になったときに抗力は8倍、慣性力は$8\sqrt{2}$倍になる。
 また、摩擦力は8倍になる。したがって、立方体2は動く。
+
+\section{}
+\subsection{}
+【1】伊勢湾台風 \par
+【2】災害対策基本法 \par
+【3】急峻な地形や急勾配の河川 \par
+【4】河川$\cdot$ダムのや下水道の整備 \par
+【5】ハザードマップの作成や防災気象情報の提供
+
+\subsection{}
+L1$\cdot$L2津波の再起年数はそれぞれ数十年から百数十年、数百年から千年である。
+L1津波に対しては海岸構造物による防御で被害を出さないようにし、
+L2津波に対してはこれにソフト対策を組み合わせて避難を容易にして被害を小さくする対策が取られる。
+
+\subsection{}
+計画高水位が低い場合には堤防高さを低くでき、建設・管理のコストが削減できる。
+また、計画高水位が低いということはダムなどの洪水調節施設での貯留量が大きい
+ということを意味し、洪水発生時の雨量を流出させすぎず貯留しておくことは、後の利水の観点で良い。
+
+\subsection{}
+オランダ。日本の国土の性質はアメリカよりオランダに近い。日本でも災害で潰れたから地域全体引っ越すとかできない。
 \end{document}
