#27 運動量の符号を修正

--- a/field3/2020/main.tex
+++ b/field3/2020/main.tex
@@ -115,11 +115,11 @@ $A$と$h$の間には$A = mh^2$、つまり$h = \sqrt{A/m}$が成り立つこと
 \subsubsection{}
 運動量保存則により、
 \begin{equation}
-  \rho Q v_1 - \rho Q v_2 = \frac{1}{2} \rho g B_1 h_1^2 - \frac{1}{2} \rho g B_2 h_2^2
+  \rho Q v_2 - \rho Q v_1 = \frac{1}{2} \rho g B_1 h_1^2 - \frac{1}{2} \rho g B_2 h_2^2
 \end{equation}
 が成り立つ。連続式$Q = B_1 h_1 v_1 = B_2 h_2 v_2$より、
 \begin{equation}
-  \rho B_1 h_1 v_1^2 - \rho B_2 h_2 v_2^2 = \frac{1}{2} \rho g B_1 h_1^2 - \frac{1}{2} \rho g B_2 h_2^2
+  \rho B_2 h_2 v_2^2 - \rho B_1 h_1 v_1^2 = \frac{1}{2} \rho g B_1 h_1^2 - \frac{1}{2} \rho g B_2 h_2^2
 \end{equation}
 となる。
 
@@ -130,16 +130,16 @@ $A$と$h$の間には$A = mh^2$、つまり$h = \sqrt{A/m}$が成り立つこと
 \end{equation}
 である。これと$h_2 = A h_1, B_2 = C B_1$を式(18)に代入して、
 \begin{equation}
-  \rho B_1 h_1 v_1^2 \left(1 - \frac{1}{A C}\right)
+  \rho B_1 h_1 v_1^2 \left(\frac{1}{A C} - 1\right)
   = \frac{1}{2} \rho g B_1 h_1^2 (1 - A^2 C)
 \end{equation}
 を得る。これより、
 \begin{equation}
-  \frac{v_1^2}{g h_1} = \frac{A C (1 - A^2 C)}{2 (A C - 1)}
+  \frac{v_1^2}{g h_1} = \frac{A C (1 - A^2 C)}{2 (1 - A C)}
 \end{equation}
 となるから、
 \begin{equation}
-  \mathrm{Fr}_1 = \sqrt{\frac{v_1^2}{g h_1}} = \sqrt{\frac{A C (1 - A^2 C)}{2 (A C - 1)}}
+  \mathrm{Fr}_1 = \sqrt{\frac{v_1^2}{g h_1}} = \sqrt{\frac{A C (1 - A^2 C)}{2 (1 - A C)}}
 \end{equation}
 である。
 
