#33 第2問解いた、

--- a/field3/2015/main.tex
+++ b/field3/2015/main.tex
@@ -191,4 +191,39 @@ $C_x, C_y$を決定し、
   = \frac{1}{2} \rho a (\omega^2 - 2 a^2)(x_p^2 - y_p^2)
 \end{equation}
 である。
+
+\section{}
+\subsection{}
+\subsubsection{}
+温暖化水準の上昇と大気中の水蒸気量の増加は互いに原因・結果の関係にあり、
+温暖化に伴って降雨時の可降水量が増加する。
+これにより、同等の気圧パターンに対しても降水量は大きくなり、
+河川流量も増加することで洪水が発生しやすくなる。
+
+\subsubsection{}
+温室効果ガスは大気の下層から昇温をもたらし大気を不安定化させるため、
+温暖化の進行にしたがって積乱雲を伴う短時間強雨が起こりやすくなる。
+降雨の分布が時空間的に偏よるため、特定の河川で見れば洪水リスクは増加する。
+
+\subsection{}
+降水分布の偏りから、乾燥地域でさらに降水量が小さくなる。また、海面上昇により地下水の塩水化や、海水の河川への流入が起こる。
+
+\subsection{}
+\subsubsection{}
+降水の増加が起こるのはもともと水不足になりにくい雨季である。
+この増分を貯留し乾季に活用できるような社会基盤を整備するのは容易ではない。
+
+\subsubsection{}
+高緯度地域では融雪水が重要な水資源であったが、温暖化に伴って積雪時期や早まったり、
+雪の代わりに雨が降ったりすることで水資源の時間的偏りや洪水リスクが大きくなる。
+
+\subsection{}
+\subsubsection{}
+仮想シナリオのもとでシミュレーションを重ねることにより、
+行動選択の各候補に対する帰結を知ること。
+\subsubsection{}
+これまでの行動の結果と実績を評価し、将来の行動計画に反映させること。
+\subsubsection{}
+多様なシナリオの上で有益であり、気候変動がどのような進行をたどっても失敗とならない解決策。
+また、将来の状況に応じて段階的に採択する方針を変化させることが可能な解決策。
 \end{document}
