#40 第2問(3)(e)を修正

--- a/field3/2019/main.tex
+++ b/field3/2019/main.tex
@@ -223,12 +223,12 @@ $u_z$を断面内で積分すると、
 \subsubsection{}
 層流であるから、壁面せん断応力は
 \begin{equation}
-  \tau = \mu \frac{\partial u_z}{\partial r}
-  = \frac{(3 a^2 - 2 r^2 \log 2)G}{4 r \log 2}
+  \tau = \mu \left.\frac{\partial u_z}{\partial r}\right|_{r=a}
+  = \frac{(3 - 2 \log 2) a G}{4 \log 2}
 \end{equation}
 と表せる。求める値は、
 \begin{equation}
-  2 \pi r \tau = \frac{(3 a^2 - 2 r^2 \log 2) \pi G}{2 \log 2}
+  2 \pi a \tau = \frac{(3 - 2 \log 2) a^2 \pi G}{2 \log 2}
 \end{equation}
 となる。
 \end{document}
