#37 第2問解いた

--- a/field3/2014/main.tex
+++ b/field3/2014/main.tex
@@ -261,8 +261,44 @@ $H-Q$曲線が必要になる。
 流速が$\sqrt{gh}$より十分に小さい。
 水位の時間変化は無視できるが、流速の時間変化は無視できない。
 底面せん断応力は小さい。
+
 \subsection{}
 水面形は時間変化しないが、流速は重力加速度の変動や水位勾配に応じて時間変化する。
-diffusion waveでは水面形を与えると流量が定まったが、この場合は水面計が決まっても
+diffusion waveでは水面形を与えると流量が定まったが、この場合は水面形が決まっても
 流速は変化し続ける。
+
+\section{}
+\subsection{}
+\subsubsection{}
+\begin{itemize}
+  \item 一般資産水害被害額の平均は安定しているが、7年程度の周期で変動している。
+  \item 総浸水面積と宅地等浸水面積は減少傾向にある。
+  \item 総浸水面積に対する宅地等浸水面積の割合は減少傾向にある。
+\end{itemize}
+
+\subsubsection{}
+1975年頃から1990年頃までは都市河川の洪水に対する防御等に注力し、
+宅地等浸水面積を減少させてきた。
+それ以降も宅地以外の地域での防災を加えて進めて総浸水面積を減少させてきた。
+一般資産水害密度は増加傾向にあり、
+これは都市地域に財が集中していることや人口密度の増加を反映していると考えられる。
+
+\subsubsection{}
+気候変動に伴う極端な気象現象の増加で水害につながるハザードは増える。
+これにより宅地等浸水面積と総浸水面積が増加する。
+都市におけるサービスの集中はより一層進行し、一般資産水害密度は大きくなる。
+したがって、一般資産水害被害額は浸水面積を上回る速さで大きくなる。
+
+\subsection{}
+\subsubsection{}
+沖波が防波堤によって遮られることで、本来は岸に向かって移動していた土砂が
+防潮堤に沿って堆積する。土砂の供給が少なくなった海岸は河川流による侵食が進行する。
+
+\subsubsection{}
+物理的な防御のレベルをどこまで高めてもそれを上回るハザードが発生する可能性はある。
+防波堤に頼り切った市民が防災能力を持たないようになることで、
+超過ハザードに対して莫大な被害を出すようでは良くない。
+堤内で生活する市民が防災能力・意識をもつためのソフト対策や避難設備にも投資し、
+物理的な防御と組み合わせることで、
+あらゆるレベルのハザードに対してなるべく強い状態を保つことが望ましい。
 \end{document}
