--- a/field3/2013/main.tex
+++ b/field3/2013/main.tex
@@ -114,4 +114,34 @@ $v_B, h_B$とすると、
   a_B = 2^{\frac{1}{3}} a
 \end{equation}
 である。
+
+\section{}
+\subsection{}
+日流量を大きさの順に並べ替えて示した曲線を流況曲線という。
+例えば、水力発電の流量計画で用いられる。
+
+\subsection{}
+豊水(25\%)流量は流況曲線における上位から25\%、つまり95日目の流量である。
+平水流量、低水流量、渇水流量も同様である。これらの値を読み取ると表1を得る。
+\begin{table}[htb]
+  \caption{八斗島地点・ナコンサワン地点における平水流量と渇水流量}
+  \centering
+  \begin{tabular}{l|ll}
+    観測地点 & 平水流量[$\mathrm{m^3/s}$] & 渇水流量[$\mathrm{m^3/s}$] \\ \hline
+    八斗島 & 175 & 90 \\
+    ナコンサワン & 555 & 300 \\ \hline
+  \end{tabular}
+\end{table}
+
+\subsection{}
+流量は、流れの断面積と流速をそれぞれ測定してそれらの積として求める。
+実際にはいくつかの断面サンプルの計測から水位-流量曲線を作成し、水位から推定する。
+降水量は雨量計の受水器に入った雨を計測することで求める。\par
+流量は直接測定されずに、不確実性をもつ測定値の積で表現され、
+さらに経験的なモデルから推測するため、より不確実性が大きい。\par
+年河川流出量に対する年降水量の割合の観測推定誤差が大きいのは、ナコンサワンと考えられる。
+八斗島地点と比べ流量が大きく、河川断面が大きいと推察される。
+断面積や断面流速を決定するための断面内計測点が不十分になり、
+流量の誤差が大きくなるため。
+
 \end{document}
