#10 第1問(4)c,dを修正

--- a/field3/2018/main.tex
+++ b/field3/2018/main.tex
@@ -44,13 +44,13 @@
 
 \subsubsection{}
 質量$m$の水塊の損失水頭$H_T$から取り出せるエネルギーは$mgH_T$である。
-ここでは流量が$Q = \pi d^2 v$であり、有効落差$H_T$による仕事率$P$は、
+ここでは流量が$Q = \pi d^2 v / 4$であり、有効落差$H_T$による仕事率$P$は、
 \begin{equation}
-  P = \rho Q g H_T = \rho g \pi d^2 v H_T
+  P = \rho Q g H_T = \frac{\rho g \pi d^2 v H_T}{4}
 \end{equation}
 と表せる。したがって、
 \begin{equation}
-  T = P \eta = \rho g \pi d^2 v H_T \eta
+  T = P \eta = \frac{\rho g \pi d^2 v H_T \eta}{4}
 \end{equation}
 となる。
 
