第1問(1)(b)を修正

--- a/field1/2023/main.tex
+++ b/field1/2023/main.tex
@@ -20,7 +20,7 @@
 \end{equation}
 が成り立つ．
 中立面では軸ひずみが生じないため
-$\Delta s = 0$となるから
+$\Delta s = dx$となるから
 \begin{equation}
   \Delta \theta = \frac{dx}{R}
 \end{equation}
